--- a/airplane/css/main.css
+++ b/airplane/css/main.css
@@ -14,7 +14,7 @@ body{-webkit-tap-highlight-color:rgba(255,255,255,0);font-family:sans-serif;}
 button{
     outline: none;
 }
-#startdiv{display:none;width: 27rem;background: url(../image/start_bg.jpg) center top no-repeat;background-size:100%;height:100%;overflow: hidden;}
+#startdiv{display:none;width: 27rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/start_bg.jpg) center top no-repeat;background-size:100%;height:100%;overflow: hidden;}
 #startdiv .gameStart{width:10.875rem;margin: 8rem auto 0;}
 .gameStart .gameBtn{margin-top:1rem;}
 .gameBtn span,.gameBtn a{display:block;margin-top:.875rem;width:10.45rem;border:.2rem #4b4f50 solid;border-radius:2rem;background-color:#c4c8cb;font-size:1.25rem;color:#000;line-height:2.25rem;height:2.25rem;text-align:center;}
@@ -32,7 +32,7 @@ button{
 }
 .oDiv{width: 27rem;
     height:48rem;
-    background-image:url(../image/start_bg.jpg);
+    background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/start_bg.jpg);
     background-size:100%;
     display: none;
     position:absolute;
@@ -48,15 +48,15 @@ button{
     top:0;
     left:0;
     z-index:1;
-    background:url(../image/bg1.jpg) no-repeat;
+    background:url(http://zhenimg.com/marketpic/appimg/2015brand/bg1.jpg) no-repeat;
     background-size:100%;
 }
 .oDiv3{
-    background-image:url(../image/bg2.jpg);
+    background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/bg2.jpg);
     background-size:100%;
 }
 .oDiv4{
-    background-image:url(../image/bg3.jpg);
+    background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/bg3.jpg);
     background-size:100%;
     z-index:5;
 }
@@ -93,9 +93,9 @@ button{
     font-weight: bold;
 }
 .planscore{text-align:center;padding-top:2.1rem;font-size:2.25rem;color:#fff;}
-#buji,#buji1,#buji2,#buji3{background: url(../image/buji1.png) no-repeat;width:5.025rem;height:8.35rem;position:absolute;top:0;left:21rem;background-size:100%;z-index:2;display:none;}
-#buji1{background-image:url(../image/buji2.png);width:5rem;height:8.2rem;background-size:100%;}
-#buji2{background-image:url(../image/buji3.png);width:4.8rem;height:8.175rem;background-size:100%;}
+#buji,#buji1,#buji2,#buji3{background: url(http://zhenimg.com/marketpic/appimg/2015brand/buji1.png) no-repeat;width:5.025rem;height:8.35rem;position:absolute;top:0;left:21rem;background-size:100%;z-index:2;display:none;}
+#buji1{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji2.png);width:5rem;height:8.2rem;background-size:100%;}
+#buji2{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji3.png);width:4.8rem;height:8.175rem;background-size:100%;}
 .buji1{-webkit-transform-origin:50% 100%;-webkit-animation:roll 2s linear infinite normal;}
 @-webkit-keyframes roll {
     0% {-webkit-transform: rotate(0deg);}
@@ -104,15 +104,15 @@ button{
     75% {-webkit-transform: rotate(5deg);}
     100% {-webkit-transform: rotate(0deg);}
 }
-#buji3{background-image:url(../image/bhz_bg.png);width:5.3rem;height:5.35rem;overflow:hidden;}
-#buji3 span{display:block;width:2.9rem;height:4.15rem;margin:.6rem auto 0;background-image:url(../image/buji4.png);background-size:100%;}
+#buji3{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/bhz_bg.png);width:5.3rem;height:5.35rem;overflow:hidden;}
+#buji3 span{display:block;width:2.9rem;height:4.15rem;margin:.6rem auto 0;background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji4.png);background-size:100%;}
 .mainCon{overflow:hidden;width:27rem;}
-.loading{width: 27rem;background: url(../image/load_bg.jpg) center top no-repeat;background-size:100%;height:100%;overflow: hidden;}
+.loading{width: 27rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/load_bg.jpg) center top no-repeat;background-size:100%;height:100%;overflow: hidden;}
 .loadArea{width:21.8rem;height:2.55rem;margin: 25.6rem auto 0;overflow: hidden;position:relative;}
 .loadArea .loadingBef{width:21.8rem;height:2.55rem;background-color:#c6c9ce;}
 .loadArea .loadingAft{width:0;height:2.55rem;background-color:#00ceff;position:absolute;top:0;left:0;z-index:0;}
-.loadArea .ztBg{width:18.275rem;height:1.15rem;background: url(../image/zt_bg.png) no-repeat;background-size:100%;position:absolute;top:.7rem;left:1.95rem;z-index:1;}
-.ztBtn{float:left;margin:.1rem 0 0 .35rem;width:1.95rem;height:1.85rem;background: url(../image/ztl_bg.png) no-repeat;z-index:10;background-size:100%;}
+.loadArea .ztBg{width:18.275rem;height:1.15rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/zt_bg.png) no-repeat;background-size:100%;position:absolute;top:.7rem;left:1.95rem;z-index:1;}
+.ztBtn{float:left;margin:.1rem 0 0 .35rem;width:1.95rem;height:1.85rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/ztl_bg.png) no-repeat;z-index:10;background-size:100%;}
 #contentdiv .hbBg{width:100%;height:100%;background-color:#000;opacity:0;top:0;left:0; z-index:10;}
 #contentdiv .ztArea{position: fixed;width:100%;height:100%;top:0;left:0; z-index:12;overflow:hidden;display:none;}
 #contentdiv .ztCon{width:12.15rem;margin:5.875rem auto 0;}
@@ -125,5 +125,5 @@ button{
 .fjMs .msIcon{font-size:1.5rem;}
 .fjMs #haveChance{font-size:1.4rem;}
 .audio{position:absolute;width:27rem;bottom:1rem;left:0;}
-.audio .audioKey{float:right;margin-right:1rem;background: url(../image/audio_bg.png) no-repeat;width:3.35rem;height:3.3rem;background-size:100%;}
+.audio .audioKey{float:right;margin-right:1rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/audio_bg.png) no-repeat;width:3.35rem;height:3.3rem;background-size:100%;}
 #endGame .gameBtn{margin-top: .3rem;}
