--- a/airplane/css/main.css
+++ b/airplane/css/main.css
@@ -30,7 +30,7 @@ button{
     position:relative;
     top:16rem;
 }
-.oDiv{width: 27rem;
+.oDiv,.oDiv4{width: 27rem;
     height:48rem;
     background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/start_bg.jpg);
     background-size:100%;
@@ -40,19 +40,15 @@ button{
     left:0;
     z-index:0;
 }
-.oDiv2,.oDiv3,.oDiv4{
-    width: 27rem;
-    height:48rem;
+.oDiv2{
+    width:23.3rem;
+    height:10.775rem;
     display: none;
     position:absolute;
-    top:0;
-    left:0;
-    z-index:1;
-    background:url(http://zhenimg.com/marketpic/appimg/2015brand/bg1.jpg) no-repeat;
-    background-size:100%;
-}
-.oDiv3{
-    background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/bg2.jpg);
+    top:1.75rem;
+    left:1.875rem;
+    z-index:3;
+    background:url(http://zhenimg.com/marketpic/appimg/2015brand/xfk_bg.png) no-repeat;
     background-size:100%;
 }
 .oDiv4{
@@ -92,7 +88,7 @@ button{
     font-size: 18px;
     font-weight: bold;
 }
-.planscore{text-align:center;padding-top:2.1rem;font-size:2.25rem;color:#fff;}
+.planscore{text-align:right;padding:11.4rem 3.65rem 0 0;font-size:1.5rem;color:#fff;}
 #buji,#buji1,#buji2,#buji3{background: url(http://zhenimg.com/marketpic/appimg/2015brand/buji1.png) no-repeat;width:5.025rem;height:8.35rem;position:absolute;top:0;left:.4rem;background-size:100%;z-index:2;display:none;}
 #buji1{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji2.png);width:5rem;height:8.2rem;background-size:100%;left:21rem;}
 #buji2{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji3.png);width:4.8rem;height:8.175rem;background-size:100%;}
@@ -104,21 +100,21 @@ button{
     75% {-webkit-transform: rotate(5deg);}
     100% {-webkit-transform: rotate(0deg);}
 }
-#buji3{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/bhz_bg.png);width:5.3rem;height:5.35rem;overflow:hidden;left:21rem;}
-#buji3 span{display:block;width:2.9rem;height:4.15rem;margin:.6rem auto 0;background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji4.png);background-size:100%;}
+#buji3{background-image:url(http://zhenimg.com/marketpic/appimg/2015brand/buji5.png);width:5.75rem;height:9.8rem;overflow:hidden;left:21rem;background-size:100%;}
 .mainCon{overflow:hidden;width:27rem;}
 .loading{width: 27rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/load_bg.jpg) center top no-repeat;background-size:100%;height:100%;overflow: hidden;}
-.loadArea{width:21.8rem;height:2.55rem;margin: 25.6rem auto 0;overflow: hidden;position:relative;}
-.loadArea .loadingBef{width:21.8rem;height:2.55rem;background-color:#c6c9ce;}
-.loadArea .loadingAft{width:0;height:2.55rem;background-color:#00ceff;position:absolute;top:0;left:0;z-index:0;}
-.loadArea .ztBg{width:18.275rem;height:1.15rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/zt_bg.png) no-repeat;background-size:100%;position:absolute;top:.7rem;left:1.95rem;z-index:1;}
+.loadArea{width:20rem;height:1.875rem;margin: 25.6rem auto 0;overflow: hidden;position:relative;}
+.loadArea .loadingBef{width:20rem;height:1.875rem;background-color:#c6c9ce;}
+.loadArea .loadingAft{width:0;height:1.875rem;background-color:#00ceff;position:absolute;top:0;left:0;z-index:0;}
+.loadArea .ztBg{width:13.275rem;height:1.175rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/zt_bg.png) no-repeat;background-size:100%;position:absolute;top:.43rem;left:3.3rem;z-index:1;}
 .ztBtn{float:left;margin:.1rem 0 0 .35rem;width:1.95rem;height:1.85rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/ztl_bg.png) no-repeat;z-index:10;background-size:100%;}
 #contentdiv .hbBg{width:100%;height:100%;background-color:#000;opacity:0;top:0;left:0; z-index:10;}
 #contentdiv .ztArea{position: fixed;width:100%;height:100%;top:0;left:0; z-index:12;overflow:hidden;display:none;}
+#contentdiv #endGame{width:27rem;height:48rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/end_bg.jpg) no-repeat;background-size:100%;position:absolute;top:0;left:0;z-index:10;display:none;}
 #contentdiv .ztCon{width:12.15rem;margin:5.875rem auto 0;}
 #contentdiv .ztArea img{width:12.15rem;height: 10.325rem;display:block;position: static;}
 .ztArea .gameBtn{width:10.45rem;margin: 2.075rem auto 0;}
-#label{float:left;color:#393a3e;font.align-self: rem;-size:1.4rem;margin:.2rem 0 0 .2rem;}
+#label{float:left;color:#393a3e;font-size:1.4rem;margin:.2rem 0 0 .2rem;}
 .fjMs{float:right;margin-right:.6rem;}
 #maindiv .fjMs img{float:left;width:3.12rem;height:3.36rem;position:static;margin-top:-.5rem;}
 .fjMs span{float:left;margin:.2rem 0 0 .4rem;color:#393a3e;}
@@ -126,4 +122,5 @@ button{
 .fjMs #haveChance{font-size:1.4rem;}
 .audio{position:absolute;width:27rem;bottom:1rem;left:0;}
 .audio .audioKey{float:right;margin-right:1rem;background: url(http://zhenimg.com/marketpic/appimg/2015brand/audio_bg.png) no-repeat;width:3.35rem;height:3.3rem;background-size:100%;}
-#endGame .gameBtn{margin-top: .3rem;}
+#endGame .gameBtn{margin-top: 4.75rem;}
+#endGame .gameBtn span,#endGame .gameBtn a{border:none;}
